--- a/all_static_files/base.html
+++ b/all_static_files/base.html
@@ -10,6 +10,9 @@
 
     <title>TheMiddles | One of the Biggest Online Shopping Platform</title>
 
+    <style>
+    </style>
+
     <link href="{% static 'images/favicon.ico' %}" rel="shortcut icon" type="image/x-icon">
 
 
