--- a/all_static_files/store/product_detail.html
+++ b/all_static_files/store/product_detail.html
@@ -62,11 +62,9 @@
             <div class="col-md-9">
                 <form action="{% url 'submit_review' single_product.id %}" method="POST">
                     {% csrf_token %}
-                    <h5>Write your review</h5>
+                    <h5>Rate this film</h5>
                     <div>
                         {% include "includes/alerts.html" %}
-                        <label>How do you rate this product?</label>
-                        <br>
                         <div class="rate">
                             <input type="radio" name="rating" id="rating10" value="5" required /><label for="rating10"
                                 title="5"></label>
@@ -98,12 +96,12 @@
                         <br>
 
                         {% if user.is_authenticated %}
-                        <!-- {% if orderproduct %} -->
-                        <input type="submit" value="Submit Review" class="btn btn-warning">
-                        <!-- {% else %}
-                            <p>You must purchase this product to post a review.</p>
-                            {% endif %} -->
-                        {% else %}
+                            {% if orderproduct %} 
+                                <input type="submit" value="Submit Review" class="btn btn-warning">
+                            {% else %}
+                                <p>You must purchase this movie to leave a review.</p>
+                                {% endif %} 
+                            {% else %}
                         <p>You must be logged in to post a review. <span><a href="{% url 'login' %}">Login
                                     now</a></span></p>
                         {% endif %}
