--- a/all_static_files/store/store.html
+++ b/all_static_files/store/store.html
@@ -5,7 +5,7 @@
 <!-- ========================= SECTION PAGETOP ========================= -->
 <section class="section-pagetop bg">
 	<div class="container">
-		<h2 class="title-page">Our Store</h2>
+		<h2 class="title-page">Our movies database</h2>
 	</div>
 	<!-- container //  -->
 </section>
