--- a/all_static_files/orders/payments.html
+++ b/all_static_files/orders/payments.html
@@ -24,7 +24,8 @@
                         {% endif %}
                     </div>
 				</div>
-				<div class="card">
+				<!--
+					<div class="card">
                     <h5 class="card-header">Payment Method</h5>
                     <div class="card-body">
                         <p class="card-text">
@@ -32,8 +33,9 @@
                         </p>
                     </div>
 				</div>
+				-->
 				<div class="card">
-                    <h5 class="card-header">Review Products</h5>
+                    <h5 class="card-header">Review purchased films</h5>
                     <div class="card-body">
                         <table class="table table-borderless table-shopping-cart">
                             <thead class="text-muted">
@@ -102,9 +104,8 @@
 							<img src="{% static 'images/misc/payments.png' %}" height="26" />
 						</p>
 						<div id="paypal-button-container">
-
 						</div>
-						<button onclick="makePayment()">Thanh toán</button>
+						<button class="btn btn-warning btn-block" onclick="makePayment()">Purchase (testing)</button>
 						<a href="{% url 'store' %}" class="btn btn-light btn-block">Continue Shopping</a>
 					</div>
 					<!-- card-body.// -->
