--- a/all_static_files/home.html
+++ b/all_static_files/home.html
@@ -19,7 +19,7 @@
     <div class="container">
         <header class="section-heading">
             <a href="{% url 'store' %}" class="btn btn-outline-primary float-right">See all</a>
-            <h3 class="section-title">Popular products</h3>
+            <h3 class="section-title">Popular movies</h3>
         </header><!-- sect-heading -->
         <div class="row">
             {% for product in products %}
