--- a/all_static_files/store/cart.html
+++ b/all_static_files/store/cart.html
@@ -18,7 +18,7 @@
 					<table class="table table-borderless table-shopping-cart">
 						<thead class="text-muted">
 							<tr class="small text-uppercase">
-								<th scope="col">Product</th>
+								<th scope="col">movie</th>
 								<th scope="col" width="120">Quantity</th>
 								<th scope="col" width="120">Price</th>
 								<th scope="col" class="text-right" width="200"></th>
@@ -30,10 +30,10 @@
 								<td>
 									<figure class="itemside align-items-center">
 										<div class="aside">
-											<img src="{{ cart_item.product.images.url }}" class="img-sm" />
+											<img src="{{ cart_item.movie.images.url }}" class="img-sm" />
 										</div>
 										<figcaption class="info">
-											<a href="{{ cart_item.product.get_url }}" class="title text-dark">{{ cart_item.product.product_name }}</a>
+											<a href="{{ cart_item.movie.get_url }}" class="title text-dark">{{ cart_item.movie.title}}</a>
 											<p class="text-muted small">
 												{% if cart_item.variations.all %}
 												{% for variation in cart_item.variations.all %}
@@ -50,14 +50,14 @@
 									<div class="col">
 										<div class="input-group input-spinner">
 											<div class="input-group-prepend">
-												<a href="{% url 'remove_cart' cart_item.product.id cart_item.id %}"
+												<a href="{% url 'remove_cart' cart_item.movie.id cart_item.id %}"
 													class="btn btn-light" type="button">
 													<i class="fa fa-minus"></i>
 												</a>
 											</div>
 											<input type="text" class="form-control" value="{{ cart_item.quantity }}" />
 											<div class="input-group-append">
-												<form action="{% url 'add_cart' cart_item.product.id %}" method="post">
+												<form action="{% url 'add_cart' cart_item.movie.id %}" method="post">
 													{% csrf_token %}
 													{% for variation in cart_item.variations.all %}
 													<input type="hidden" name="{{ variation.variation_category | lower }}"
@@ -77,13 +77,13 @@
 									<div class="price-wrap">
 										<var class="price">${{ cart_item.sub_total }}</var>
 										<small class="text-muted">
-											${{ cart_item.product.price }} each
+											${{ cart_item.movie.price }} each
 										</small>
 									</div>
 									<!-- price-wrap .// -->
 								</td>
 								<td class="text-right">
-									<a href="{% url 'remove_cart_item' cart_item.product.id cart_item.id %}"
+									<a href="{% url 'remove_cart_item' cart_item.movie.id cart_item.id %}"
 										class="btn btn-danger" onclick="return confirm('Are you sure?')">
 										Remove</a>
 								</td>
