--- a/all_static_files/store/product_detail.html
+++ b/all_static_files/store/product_detail.html
@@ -21,7 +21,7 @@
                     <form action="{% url 'add_cart' single_product.id %}" method="POST">
                         {% csrf_token %}
                         <article class="content-body">
-                            <h2 class="title">{{ single_product.product_name }}</h2>
+                            <h2 class="title">{{ single_product.title }}</h2>
                             <div class="mb-3">
                                 <var class="price h4">${{ single_product.price }}</var>
                             </div>
@@ -30,7 +30,7 @@
 
                             <!-- row.// -->
                             <hr />
-                            {% if single_product.stock > 0 %} {% if in_cart %}
+                            {% if 1 > 0 %} {% if in_cart %}
                             <button type="submit" class="btn btn-success">
                                 <span class="text">Add to cart</span>
                                 <i class="fas fa-check"></i>
@@ -94,8 +94,9 @@
                         Review
                         <textarea name="review" rows="4" class="form-control"></textarea>
                         <br>
-
+                    
                         {% if user.is_authenticated %}
+                        <input type="submit" value="Submit Review" class="btn btn-warning">
                             {% if orderproduct %} 
                                 <input type="submit" value="Submit Review" class="btn btn-warning">
                             {% else %}
