--- a/all_static_files/orders/order_complete.html
+++ b/all_static_files/orders/order_complete.html
@@ -64,9 +64,9 @@
                                             </tr>
                                         </thead>
                                         <tbody>
-                                            {% for item in ordered_products %}
+                                            {% for item in ordered_movies %}
                                             <tr>
-                                                <td>{{ item.product.product_name }}
+                                                <td>{{ item.movie.title }}
                                                     <p class="text-muted small">
                                                         {% if item.variations.all %}
                                                         {% for i in item.variations.all %}
@@ -76,7 +76,7 @@
                                                     </p>
                                                 </td>
                                                 <td class="text-center">{{ item.quantity }}</td>
-                                                <td class="text-center">${{ item.product_price }} USD</td>
+                                                <td class="text-center">${{ item.movie_price }} USD</td>
                                             </tr>
                                             {% endfor %}
                                         </tbody>
