sync : convert product to movie delete table Product convert feature link to link_image in table Movie

--- a/all_static_files/orders/order_complete.html
+++ b/all_static_files/orders/order_complete.html
@@ -58,7 +58,7 @@
                                     <table class="table table-bordered">
                                         <thead>
                                             <tr>
-                                                <th class="per70 text-center">Products</th>
+                                                <th class="per70 text-center">Movies</th>
                                                 <th class="per5 text-center">Qty</th>
                                                 <th class="per25 text-center">Total</th>
                                             </tr>
