--- a/all_static_files/store/cart.html
+++ b/all_static_files/store/cart.html
@@ -30,7 +30,7 @@
 								<td>
 									<figure class="itemside align-items-center">
 										<div class="aside">
-											<img src="{{ cart_item.movie.images.url }}" class="img-sm" />
+											<img src="{{ cart_item.movie.image_urls }}" class="img-sm" />
 										</div>
 										<figcaption class="info">
 											<a href="{{ cart_item.movie.get_url }}" class="title text-dark">{{ cart_item.movie.title}}</a>
