--- a/all_static_files/home.html
+++ b/all_static_files/home.html
@@ -22,13 +22,13 @@
             <h3 class="section-title">Popular movies</h3>
         </header><!-- sect-heading -->
         <div class="row">
-            {% for product in products %}
+            {% for movie in movies %}
             <div class="col-md-3">
-                <div class="card card-product-grid">
-                    <a href="{{ product.get_url }}" class="img-wrap"> <img src="{{ product.images.url }}"> </a>
+                <div class="card card-movie-grid">
+                    <a href="{{ movie.get_url }}" class="img-wrap"> <img src="{{ movie.image_urls }}"> </a>
                     <figcaption class="info-wrap">
-                        <a href="{{ product.get_url }}" class="title">{{ product.product_name }}</a>
-                        <div class="price mt-1">${{ product.price }}</div> <!-- price-wrap.// -->
+                        <a href="{{ movie.get_url }}" class="title">{{ movie.title }}</a>
+                        <div class="price mt-1">${{ movie.price }}</div> <!-- price-wrap.// -->
                     </figcaption>
                 </div>
             </div> <!-- col.// -->
