--- a/all_static_files/orders/payments.html
+++ b/all_static_files/orders/payments.html
@@ -40,7 +40,7 @@
                         <table class="table table-borderless table-shopping-cart">
                             <thead class="text-muted">
                                 <tr class="small text-uppercase">
-                                    <th scope="col">Product</th>
+                                    <th scope="col">Movie</th>
                                     <th scope="col" width="120">Quantity</th>
                                     <th scope="col" width="120">Price</th>
                                 </tr>
@@ -50,7 +50,7 @@
                                 <tr>
                                     <td>
                                         <figure class="itemside align-items-center">
-                                            <div class="aside"><img src="{{ cart_item.movie.images.url }}"
+                                            <div class="aside"><img src="{{ cart_item.movie.image_urls }}"
                                                     class="img-sm"></div>
                                             <figcaption class="info">
                                                 <a href="{{ cart_item.movie.get_url }}" class="title text-dark">
