--- a/all_static_files/store/movie_detail.html
+++ b/all_static_files/store/movie_detail.html
@@ -11,21 +11,21 @@
                 <aside class="col-md-6">
                     <article class="gallery-wrap">
                         <div class="img-big-wrap">
-                            <a href="#"><img src="{{ single_product.images.url }}" /></a>
+                            <a href="#"><img src="{{ single_movie.image_urls }}" /></a>
                         </div>
                         <!-- img-big-wrap.// -->
                     </article>
                     <!-- gallery-wrap .end// -->
                 </aside>
                 <main class="col-md-6 border-left">
-                    <form action="{% url 'add_cart' single_product.id %}" method="POST">
+                    <form action="{% url 'add_cart' single_movie.id %}" method="POST">
                         {% csrf_token %}
                         <article class="content-body">
-                            <h2 class="title">{{ single_product.title }}</h2>
+                            <h2 class="title">{{ single_movie.title }}</h2>
                             <div class="mb-3">
-                                <var class="price h4">${{ single_product.price }}</var>
+                                <var class="price h4">${{ single_movie.price }}</var>
                             </div>
-                            <p>{{ single_product.description }}</p>
+                            <p>{{ single_movie.description }}</p>
                             <hr />
 
                             <!-- row.// -->
@@ -48,7 +48,7 @@
                             <h5 class="text-danger">Out of Stock</h5>
                             {% endif %}
                         </article>
-                        <!-- product-info-aside .// -->
+                        <!-- movie-info-aside .// -->
                     </form>
                 </main>
                 <!-- col.// -->
@@ -60,7 +60,7 @@
         <br />
         <div class="row">
             <div class="col-md-9">
-                <form action="{% url 'submit_review' single_product.id %}" method="POST">
+                <form action="{% url 'submit_review' single_movie.id %}" method="POST">
                     {% csrf_token %}
                     <h5>Rate this film</h5>
                     <div>
@@ -96,7 +96,7 @@
                         <br>
                     
                         {% if user.is_authenticated %}
-                            {% if orderproduct %} 
+                            {% if ordermovie %} 
                                 <input type="submit" value="Submit Review" class="btn btn-warning">
                             {% else %}
                                 <p>You must purchase this movie to leave a review.</p>
