--- a/all_static_files/store/cart.html
+++ b/all_static_files/store/cart.html
@@ -18,8 +18,7 @@
 					<table class="table table-borderless table-shopping-cart">
 						<thead class="text-muted">
 							<tr class="small text-uppercase">
-								<th scope="col">movie</th>
-								<th scope="col" width="120">Quantity</th>
+								<th scope="col">Movie</th>
 								<th scope="col" width="120">Price</th>
 								<th scope="col" class="text-right" width="200"></th>
 							</tr>
@@ -46,39 +45,8 @@
 									</figure>
 								</td>
 								<td>
-									<!-- col.// -->
-									<div class="col">
-										<div class="input-group input-spinner">
-											<div class="input-group-prepend">
-												<a href="{% url 'remove_cart' cart_item.movie.id cart_item.id %}"
-													class="btn btn-light" type="button">
-													<i class="fa fa-minus"></i>
-												</a>
-											</div>
-											<input type="text" class="form-control" value="{{ cart_item.quantity }}" />
-											<div class="input-group-append">
-												<form action="{% url 'add_cart' cart_item.movie.id %}" method="post">
-													{% csrf_token %}
-													{% for variation in cart_item.variations.all %}
-													<input type="hidden" name="{{ variation.variation_category | lower }}"
-														value="{{ variation.variation_value | capfirst }}">
-													{% endfor %}
-													<button class="btn btn-light" type="submit" id="button-plus">
-														<i class="fa fa-plus"></i>
-													</button>
-												</form>
-											</div>
-										</div>
-										<!-- input-group.// -->
-									</div>
-									<!-- col.// -->
-								</td>
-								<td>
 									<div class="price-wrap">
-										<var class="price">${{ cart_item.sub_total }}</var>
-										<small class="text-muted">
-											${{ cart_item.movie.price }} each
-										</small>
+										<var class="price">${{ cart_item.movie.price  }} </var>
 									</div>
 									<!-- price-wrap .// -->
 								</td>
