--- a/all_static_files/orders/payments.html
+++ b/all_static_files/orders/payments.html
@@ -66,7 +66,7 @@
                                     </td>
                                     <td>
                                         <div class="price-wrap">
-                                            <var class="price">$ {{ cart_item.movie.price }} </var>
+                                            <var class="price">$ {{ cart_item.movie.price }} </var><small class="text-muted">for 30 days</small>
                                         </div> <!-- price-wrap .// -->
                                     </td>
                                 </tr>
