--- a/all_static_files/store/checkout.html
+++ b/all_static_files/store/checkout.html
@@ -97,6 +97,7 @@
                                     <td>
                                         <div class="price-wrap">
                                             <var class="price">$ {{ cart_item.movie.price }}</var>
+                                            <small class="text-muted">for 30 days</small>
                                         </div> <!-- price-wrap .// -->
                                     </td>
                                 </tr>
