--- a/all_static_files/base.html
+++ b/all_static_files/base.html
@@ -8,7 +8,7 @@
     <meta http-equiv="cache-control" content="max-age=604800" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>TheMiddles | One of the Biggest Online Shopping Platform</title>
+    <title>Real Varid Film - Online film watching platform</title>
 
     <style>
     </style>
